--- a/index.html
+++ b/index.html
@@ -73,13 +73,11 @@
     </div>
     </section>
     <footer class="rodape">
-        <div class="logo__alura">
-        <img src="./assets/img/Logo Alura Include.svg" alt="logo alura"/>
+        <img src="./assets/img/Logo Alura Include.svg" alt="logo alura" class="logo__alura"/>
             <p class="footer">Copyright
                 <script>document.write(new Date().getFullYear())</script> &copy; <a
                     href="https://www.instagram.com/dud4h.s/" target="_blank" id="rodape">Duda Araujo</a>
             </p>
-        </div>
      </footer>
     <script src="./assets/js/script.js"></script>
 </body>
