--- a/index.html
+++ b/index.html
@@ -61,16 +61,44 @@
                 <a class="redes active" href="#" target="_blank">
                     <i class='bx bxl-github'></i>Certificados</a>
             </div>
-
     </section>
     <section id="projetos" class="container">
-    <div class="conteudo">
-        <h3 class="titulo">Meus <span class="subtitulo">Projetos</span></h3>
-        <span class="resumoBio">Vivamus urna nisi, lobortis ut euismod in, sollicitudin ac ipsum. 
-            Mauris a libero id velit pulvinar scelerisque at quis magna. Aliquam erat volutpat.
-        </span>
-        
-    </div>
+        <div class="conteudo-projeto">
+            <h3 class="titulo">Meus <span class="subtitulo">Projetos</span></h3>
+            <span class="resumoBio">Vivamus urna nisi, lobortis ut euismod in, sollicitudin ac ipsum.
+                Mauris a libero id velit pulvinar scelerisque at quis magna. Aliquam erat volutpat.
+            </span>
+            <div class="row">
+                <div class="col-sm-6 col-md-3 mb-4">
+                    <div class="custom-card card border">
+                        <div class="card-body">
+                            <h5>Formulario</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3 mb-4">
+                    <div class="custom-card card border">
+                        <div class="card-body">
+                            <h5>Portfolio</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3 mb-4">
+                    <div class="custom-card card border">
+                        <div class="card-body">
+                            <h5>Japeia</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3 mb-4">
+                    <div class="custom-card card border">
+                        <div class="card-body">
+                            <h5>Conect SLZ</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
        <footer class="rodape">
             <img src="./assets/img/Logo Alura Include.svg" alt="logo alura" class="logo__alura"/>
